--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+input:focus,
+textarea:focus,
+button:focus,
+div:focus {
+  outline: none;
+}
